# robust-lit-review

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  README.md  README.zhtw.md  pyproject.toml
.claude/skills/: SKILL.md  brainstorm-topic.md  lit-review.md
.github/workflows/: render-release.yml
data/: .gitkeep  scimagojr 2024 US.csv
manuscript/: additional-file-1-prisma-checklist.md  additional-file-2-prompt-templates.md  manuscript.docx  manuscript.qmd  references.bib
manuscript/sections/: 00-abstract.qmd  01-background.qmd  02-methods.qmd  03-results.qmd  04-discussion.qmd  05-conclusions.qmd  figure1-pipeline.qmd
output/: cover_letter.qmd  her2_adjuvant_references.bib  her2_adjuvant_treatment_review.qmd  literature_review.qmd  references.bib  render_pdf.py
output-dlbcl/: literature_review.docx  literature_review.qmd  references.bib
output-dlbcl/sections/: 00-abstract.qmd  01-introduction.qmd  01-introduction.qmd.context.json  02-methods.qmd  02-methods.qmd.context.json  03-pathogenesis.qmd  03-pathogenesis.qmd.context.json  04-diagnosis.qmd  04-diagnosis.qmd.context.json  05-etiology.qmd  05-etiology.qmd.context.json  06-treatment.qmd  06-treatment.qmd.context.json  07-covid.qmd  07-covid.qmd.context.json  08-discussion.qmd  09-prisma-checklist.qmd  (+1 more)
output-mm/: literature_review.docx  literature_review.qmd  references.bib
writing-plan/: 00-target-journals.md  01-paper-title.md  02-llm-engineering-mapping.md  03-paper-outline.md  04-novel-contributions.md  05-key-tables.md  06-references.md  07-systematic-reviews-journal-guide.md
(+80 files in other folders)
