[project]
name = "robust-lit-review"
version = "0.1.0"
description = "World-class automated literature review pipeline using Scopus, PubMed, Embase, Unpaywall, and Zotero APIs"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "bibtexparser>=1.4",
    "rich>=13.0",
    "typer>=0.12",
    "tenacity>=8.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
semantic = [
    "sentence-transformers>=3.0",
    "torch>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
]

[project.scripts]
lit-review = "litreview.cli:app"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
